<resources>
    <string name="app_name">AlkemyBankBase</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_with_a_social_account">Log In with a social account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="firstname_error">Enter a valid name</string>
    <string name="lastname_error">Enter a valid lastname</string>
    <string name="email_error">Enter a valid Email</string>
    <string name="confirm_password_error">Passwords are not the same</string>
    <string name="password_error">Password must have at least 8 characters, 1 uppercase and 1 number</string>
    <string name="fecha">Fecha</string>
    <string name="importe">Importe</string>
    <string name="you_don_t_have_any_transaction">You don\'t have any transaction</string>
    <string name="ultimos_movimientos">Ultimos movimientos</string>
    <string name="ver_m_s">Ver más</string>
    <string name="_0_00">$0.00</string>
    <string name="balance">Balance</string>
    <string name="cero">$0.00</string>
    <string name="pref_file">com.Alkemy.alkemybankbase.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">534006851460716</string>
    <string name="fb_login_protocol_scheme">fb534006851460716</string>
    <string name="facebook_client_token">c506db6051cb53aaceada3730335c0ea</string>
    <string name="no_internet">No internet connection. Please connect to internet and retry.</string>
    <string name="retry">Retry</string>
    <string name="chargeBalance">Cargar saldo</string>
    <string name="amount_error">Ingrese un monto mayor que cero</string>
    <string name="concept_error">El limite de caracteres es de 20</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="concept">Concept</string>
    <string name="toAccountId_error">Una cuenta solo puede contener numeros mayores que 0</string>
    <string name="destination">Destination Account</string>
    <string name="send">Send</string>
    <string name="date">Fecha de gasto</string>
    <string name="made_with">Made with</string>
    <string name="by_grupo_2">by Grupo 2</string>
    <string name="you_cant_access_to_transactions">You cannot access to transactions. Please check your internet connection</string>
    <string name="low_amount_error">No hay fondos suficientes. Realice un gasto en lugar de transferencia o ingrese un menor monto</string>
</resources>